Bugfix: make close btn clickable on mobile

--- a/src/sass/_download-image.scss
+++ b/src/sass/_download-image.scss
@@ -21,4 +21,8 @@
 	    margin: .5em auto 1em;
 	    text-align: center;
 	}
+
+	.byb-close-btn {
+  		z-index: 20;
+  	}
 }
